<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10dp"
    android:background="@color/colorPrimaryDark">
    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"

        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent"
        android:stretchColumns="1">
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_raceid"-->

        <TableRow

            android:id="@+id/firstRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/strok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10dp"
                android:text="@string/strock1"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_strock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-1dp"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center_vertical"
                android:padding="@dimen/_10dp"
                android:text="@string/strock"
                android:textColor="@color/red"
                android:textSize="15sp" />

        </TableRow>
        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="-1dp"
                android:text="@string/sex1"
                android:background="@drawable/cell_shape"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center_vertical"
                android:text="@string/sex"
                android:layout_marginTop="-1dp"
                android:layout_marginStart="-1dp"
                android:background="@drawable/cell_shape"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginLeft="-1dp" />

        </TableRow>
        <TableRow

            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/customization"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:fontFamily="sans-serif-medium"


                android:background="@drawable/cell_shape"
                android:text="@string/customization1"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_customization"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:layout_marginLeft="-1dp"
                android:gravity="center_vertical"
                android:background="@drawable/cell_shape"
                android:text="@string/customization"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
        <TableRow

            android:id="@+id/fourthRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/prize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:background="@drawable/cell_shape"
                android:text="@string/prize1"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_prize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_marginTop="-1dp"
                android:layout_marginLeft="-1dp"
                android:gravity="center_vertical"
                android:background="@drawable/cell_shape"
                android:text="@string/prize"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>