<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:civ_border_width="@dimen/_2dp"
            app:civ_border_color="@color/white"
            android:src="@drawable/user_ic"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textDirection="ltr"
            android:textColor="@color/lighttext"
            android:textSize="19dp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundtextview"
            android:paddingStart="8dp"
            android:textDirection="ltr"
            android:inputType="text"
            android:hint="@string/username"
            android:maxLines="1"
            android:focusable="false"
            android:clickable="false"
            android:textColorHint="@color/Gray"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_subscribername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscriber"
            android:textDirection="ltr"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_subscribername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundtextview"
            android:paddingStart="8dp"
            android:inputType="text"
            android:hint="@string/subscriberhint"
            android:maxLines="1"
            android:focusable="false"
            android:clickable="false"
            android:textColorHint="@color/Gray"
            android:textSize="@dimen/_16sp"
            android:textDirection="ltr"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_camel_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camel_no"
            android:textDirection="ltr"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_camel_no."
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_2dp"
            android:background="@drawable/roundtextview"
            android:hint="@string/camel_no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textDirection="ltr"
            android:textSize="@dimen/_16sp" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/lighttext"
            android:textDirection="ltr"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_2dp"
            android:background="@drawable/roundtextview"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textDirection="ltr"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:text="@string/mobile"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_2dp"
            android:background="@drawable/roundtextview"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            android:textDirection="ltr"
            android:textSize="@dimen/_16sp" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:text="@string/password"
            android:textColor="@color/lighttext"
            android:textSize="18dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundtextview"
            android:paddingStart="8dp"
            android:textDirection="ltr"
            android:inputType="textPassword"
            android:hint="@string/passwordhint"
            android:textColorHint="@color/Gray"
            android:maxLines="1"
            android:maxEms="10"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tv_cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:text="@string/cpassword"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_cpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundtextview"
            android:paddingStart="8dp"
            android:textDirection="ltr"
            android:inputType="textPassword"
            android:hint="@string/cpasswordhint"
            android:textColorHint="@color/Gray"
            android:maxLines="1"
            android:maxEms="10"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/login_white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btn_update"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:background="@color/green"-->
<!--            android:paddingBottom="@dimen/_10dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/update" />-->

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
