<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingLeft="@dimen/_13sp"
    android:paddingTop="@dimen/_5dp"
    android:paddingRight="@dimen/_13sp"
    android:paddingBottom="4dp">

    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/fourRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/item_from_sub_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/topleftcell"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/subcribername"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/subNameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-1dp"
                android:layout_weight="1"
                android:background="@drawable/toprightround"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/camel_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/item_from_camel_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/type"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/camelGenderText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"

                android:padding="@dimen/_10dp"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>

        <TableRow

            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/item_from_camel_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:background="@drawable/bottomleftcell"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/camel_no"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/camelNoText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:background="@drawable/downrightround"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/customization"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>