<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hd_logo_png" />

<!--    <ImageView-->
<!--        android:id="@+id/img_logo"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_200dp"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_marginTop="65dp"-->
<!--        android:src="@mipmap/ic_launcher"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginTop="32dp"
        android:text="@string/idno"
        android:textColor="@color/lighttext"
        android:textDirection="ltr"
        android:textSize="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text=""
        android:textDirection="ltr"
        android:background="@drawable/round_layout"
        android:hint="@string/enter_username"
        android:singleLine="true"
        android:inputType="text"
        android:maxLength="20"
        android:imeOptions="actionNext"
        android:textColorHint="@color/Gray_divider"
        android:paddingLeft="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:textColor="@color/Gray_divider"
        app:layout_constraintTop_toBottomOf="@+id/txt_username"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="@color/lighttext"
        android:textSize="@dimen/_20dp"
        app:layout_constraintHorizontal_bias="0"
        android:textDirection="ltr"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginTop="@dimen/_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        android:layout_marginLeft="@dimen/_25dp" />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_username"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="@dimen/_10dp"
        android:singleLine="true"
        android:text=""
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        android:background="@drawable/round_layout"
        android:hint="@string/enter_password"
        android:textColorHint="@color/Gray_divider"
        android:paddingLeft="@dimen/_20dp"
        android:textColor="@color/Gray_divider"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_50dp"
        android:text="@string/login"
        android:background="@drawable/red_layout"
        android:textColor="@color/login_white"
        android:layout_marginTop="@dimen/_25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"/>
    <!--android:backgroundTint="@color/red"-->




</androidx.constraintlayout.widget.ConstraintLayout>